--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
 	],
 	"peerDependencies": {
 		"react": "*",
+		"react-dom": "*",
 		"styled-components": ">=5"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.9",
+		"@types/react-dom": "^18.0.5",
 		"@types/styled-components": "^5.1.25",
 		"@typescript-eslint/eslint-plugin": "^5.25.0",
 		"@typescript-eslint/parser": "^5.25.0",
