--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"homepage": "https://github.com/chainsulting/easyflex",
 	"scripts": {
-		"test": "",
+		"test": "jest",
 		"build": "tsc",
 		"format": "prettier --write \"src/**/*.ts\"",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
@@ -31,6 +31,9 @@
 		"styled-components": ">=5"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.3.0",
+		"@types/jest": "^28.1.4",
 		"@types/react": "^18.0.9",
 		"@types/react-dom": "^18.0.5",
 		"@types/styled-components": "^5.1.25",
@@ -40,7 +43,11 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-react": "^7.30.0",
 		"eslint-plugin-react-hooks": "^4.5.0",
+		"jest": "^28.1.2",
+		"jest-environment-jsdom": "^28.1.2",
+		"jest-styled-components": "^7.0.8",
 		"prettier": "^2.6.2",
+		"ts-jest": "^28.0.5",
 		"typescript": "^4.6.4"
 	}
 }
