Changed flex-direction of modal background to row to allow the child to use align-self to move up and down. Set links in typedoc to main to reduce diff size

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"homepage": "https://github.com/chainsulting/easyflex",
 	"scripts": {
 		"test": "jest",
-		"doc": "typedoc",
+		"doc": "typedoc --gitRevision main",
 		"build": "tsc",
 		"format": "prettier --write \"src/**/*.ts\"",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
