--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
 	"homepage": "https://github.com/chainsulting/easyflex",
 	"scripts": {
 		"test": "jest",
-		"doc": "typedoc --gitRevision main",
 		"build": "tsc",
 		"format": "prettier --write \"src/**/*.ts\"",
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
-		"prepare": "rm ./lib/* ./docs/* -rf && npm run build && npm run doc",
+		"prepare": "rm ./lib/* -rf && npm run build",
 		"prepublishOnly": "npm test && npm run lint",
 		"preversion": "npm run lint",
 		"version": "npm run format && git add -A src",
@@ -49,7 +48,6 @@
 		"jest-styled-components": "^7.0.8",
 		"prettier": "^2.6.2",
 		"ts-jest": "^28.0.5",
-		"typedoc": "^0.23.8",
 		"typescript": "^4.6.4"
 	}
 }
