--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"lib/**/*"
 	],
 	"scripts": {
+		"clean_node_modules": "rm ./node_modules/react ./node_modules/react-dom ./node_modules/styled-components -rf",
 		"test": "jest",
 		"build": "tsc",
 		"format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
