--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"prepare": "rm ./lib/* -rf && npm run build",
 		"prepublishOnly": "npm test && npm run lint",
-		"preversion": "npm run lint",
+		"preversion": "npm test && npm run lint",
 		"version": "npm run prettier && git add -A src",
 		"postversion": "git push && git push --tags"
 	},
